--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": ".\r ## Assignments",
   "main": "knexfile.js",
   "scripts": {
-    "start": "nodeman index.js"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,7 @@
     "helmet": "^3.15.0",
     "knex": "^0.15.2",
     "morgan": "^1.9.1",
+    "nodemon": "^1.18.6",
     "sqlite3": "^4.0.4"
   }
 }
